# MeowSense

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: BOT_DESIGN.md  ROADMAP.md
notebooks/: 01_eda.ipynb  02_baselines.ipynb
src/: download_data.py  embeddings.py  experiment_channel_norm.py  features.py  train_baseline.py  train_cnn.py  train_transfer.py
tests/: conftest.py  test_cnn.py  test_features.py  test_reproduce.py  test_transfer.py
